--- a/Carrot_Market_iOS/Carrot_Market_iOS/Resources/Storyboards/Detail.storyboard
+++ b/Carrot_Market_iOS/Carrot_Market_iOS/Resources/Storyboards/Detail.storyboard
@@ -53,8 +53,8 @@
                                                                     <constraint firstAttribute="width" secondItem="FMy-E1-Oye" secondAttribute="height" multiplier="1:1" id="zKb-qf-X7t"/>
                                                                 </constraints>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fjA-Dz-kOg">
-                                                                <rect key="frame" x="63" y="20" width="41.333333333333343" height="20.333333333333329"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="쿠리보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fjA-Dz-kOg">
+                                                                <rect key="frame" x="63" y="20" width="44.333333333333343" height="20.333333333333329"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
